# unimem

./: .aiderules  .cursorrules  .gitignore  LICENSE  README.md  pyproject.toml
.unimem/: memory.md
Formula/: unimem.rb
brew/: unimem.rb
docs/: design.md
examples/: python_sdk_usage.py
scripts/: run_tests.sh
src/unimem/: __init__.py
tests/: conftest.py  test_adapters.py  test_cli.py  test_git_collector.py  test_manager.py  test_optimizations.py  test_schemas.py  test_watcher.py
unimem/: __init__.py
unimem.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
unimem/adapters/: base.py  claude.py  codex.py  gemini.py  generic.py  registry.py
unimem/cli/: app.py
unimem/cli/commands/: continue_cmd.py  doctor.py  init.py  snapshot.py  status.py  summary.py  task.py  update.py
unimem/collector/: events.py  file_collector.py  git_collector.py  sessions.py
unimem/config/: constants.py  settings.py
unimem/memory/: manager.py  migrations.py  schemas.py  snapshots.py
unimem/storage/: file_store.py  json_store.py
unimem/summarizer/: base.py  local.py  state_builder.py
unimem/utils/: logger.py  paths.py  timestamps.py
unimem/watcher/: filesystem.py  handlers.py
